--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
         <div class="card login-card shadow d-flex flex-row">
 
             <!-- Left Section -->
-            <div class="left-box text-white p-4 d-flex flex-column justify-content-center">
-                <h3>Login</h3>
-                <p class="mt-2">Get access to your<br>Orders, Wishlist and<br>Recommendations</p>
-                <img src="Login.png" class="img-fluid mt-4" alt="login image">
+            <div class="left-box text-white px-4 py-3 d-flex flex-column">
+                <h3 class="login-title mb-1 mt-3">Login</h3><br>
+                <p class="login-desc mb-4">Get access to your Orders, <br> Wishlist and Recommendations</p>
+                <div class="image-container mt-auto">
+                    <img src="Login.png" class="img-fluid" alt="login image">
+                </div>
             </div>
 
             <!-- Right Section -->
@@ -51,7 +53,7 @@
 
                 <!-- Bottom Link -->
                 <div class="text-center mt-3 small">
-                    <span class="text-muted"></span>
+                    <span class="text-muted"> </span>
                     <a href="#" class="text-primary text-decoration-none">New to Flipkart?</a>
 
                     <a href="#" class="text-primary text-decoration-none">Create an account</a>
